# kmonodim

./: ChangeLog  KNOWN_BUGS  README  TODO  acconfig.h  autogen.sh  config.h.in  configure.in  kmonodim.spec  mkinstalldirs  static_link
macro/: acinclude.m4  blas.m4  generic.m4  kde.m4  lapack.m4  qt.m4  qwt.m4
macro/CVS/: Entries  Repository
src/: .cvsignore  Makefile.am  arrowpad.cpp  arrowpad.h  arrowpad.ui  barrier.cpp  barrier.h  barrierdlg.cpp  barrierdlg.h  barrierdlg.ui  barrierpotential.cpp  barrierpotential.h  color.cpp  color.h  control.h  curve.cpp  curve.h  custompotential.cpp  custompotential.h  debug.h  eigenlistview.cpp  eigenlistview.h  eigenlistview.ui  eigenlistviewbase.cpp  eigenlistviewbase.h  eigenvalue.cpp  eigenvalue.h  error.h  filemanager.cpp  filemanager.h  integral.cpp  integral.h  integral.ui  main.cpp  mainwindow.cpp  mainwindow.h  model.cpp  model.h  morsedlg.cpp  morsedlg.h  (+45 more)
src/CVS/: Entries  Repository  Tag
src/dialogs/: infinite.cpp  infinite.h  infinite.moc  infinite.ui  infinitebase.cpp  infinitebase.h  infinitebase.moc  morse.ui  varshni.cpp  varshni.h  varshni.moc  varshni.ui  varshnibase.cpp  varshnibase.h  varshnibase.moc
src/dialogs/CVS/: Entries  Repository
src/images/: time_0.xpm  time_1.xpm  time_2.xpm  time_3.xpm  time_4.xpm
src/images/CVS/: Entries  Repository  Root
