dnl Process this file with autoconf to produce a configure script.
AC_INIT(src/plot.h)
AM_CONFIG_HEADER(config.h)
AC_CANONICAL_SYSTEM
AM_INIT_AUTOMAKE(kmonodim,1.0)
#AM_CONFIG_HEADER(src/config.h)
AC_PREFIX_DEFAULT(/usr/local)
AC_PREFIX_PROGRAM(kmonodim)

AC_LANG_CPLUSPLUS

dnl Checks for programs.
AC_PROG_CC
AC_PROG_CXX
AC_PROG_CXXCPP

dnl checking for qt
AC_SS_FIND_QT_MOC
AC_SS_FIND_QT_UIC
AC_SS_FIND_QT_INCLUDE_DIR
AC_SS_FIND_QT_LIBRARY_DIR
AC_SS_FIND_QWT_INCLUDE_DIR
AC_SS_FIND_QWT_LIBRARY_DIR
AC_SS_CHECK_QWT_VERSION
AC_SS_FIND_KDE_INCLUDE_DIR
AC_SS_FIND_KDE_LIBRARY_DIR
AC_SS_FIND_BLAS_LIBRARY_DIR
AC_SS_FIND_LAPACK_LIBRARY_DIR
AC_CHECK_LIB(m,sin)


dnl Checks for header files.

dnl Checks for typedefs, structures, and compiler characteristics.
dnl Checks for library functions.

AC_OUTPUT(Makefile src/Makefile)
